# Scherbenmaschine

./: README.md
voruntersuchungen/: README  README.md
voruntersuchungen/3D-Archaide/: Cargo.toml  README  resu.json  vec.json
voruntersuchungen/3D-Archaide/src/: main.rs
voruntersuchungen/CRMC/: README  TKA XRF.xls  TKAMetadaten.csv  TKAXRF.csv  key_documentationCRMC.json  xyz.R
